--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.9
   get: ^4.6.6
+  http: ^1.1.0
   shared_preferences: ^2.2.2
 
 dev_dependencies:
