--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.0.9
   get: ^4.6.6
   http: ^1.1.0
+  lottie: ^2.7.0
   shared_preferences: ^2.2.2
 
 dev_dependencies:
@@ -56,6 +57,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/onborad/
+    - assets/images/lottie/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
