--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.0.9
   get: ^4.6.6
   http: ^1.1.0
+  image_picker: ^1.0.4
   lottie: ^2.7.0
   shared_preferences: ^2.2.2
   socket_io_client: ^2.0.3+1
