--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.0
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.3.3
@@ -36,8 +37,9 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.9
   get: ^4.6.6
-  http: ^1.1.0
+  http: ^1.0.0
   image_picker: ^1.0.4
+  jiffy: ^6.2.1
   lottie: ^2.7.0
   shared_preferences: ^2.2.2
   socket_io_client: ^2.0.3+1
