--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   lottie: ^2.7.0
   shared_preferences: ^2.2.2
   socket_io_client: ^2.0.3+1
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
